FHEXT-23 Sharepoint connector dialog interactivity bugs fixed
FHEXT-23 (Sharepoint Online Connector)